--- a/DeepFocus/MainWindow.xaml
+++ b/DeepFocus/MainWindow.xaml
@@ -3,13 +3,83 @@
     x:Class="DeepFocus.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DeepFocus"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Title="DeepFocus">
+    xmlns:local="using:DeepFocus"
+    xmlns:viewmodels="using:DeepFocus.ViewModels"
+    mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <Window.SystemBackdrop>
+        <MicaBackdrop />
+    </Window.SystemBackdrop>
+
+    <Grid x:Name="RootGrid" Background="{ThemeResource BackgroundBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Title Bar -->
+        <Grid x:Name="AppTitleBar" Grid.Row="0">
+            <TextBlock x:Name="AppTitle" Text="DeepFocus"
+                     VerticalAlignment="Center"
+                     Margin="12,0,0,0"
+                     Style="{StaticResource CaptionTextBlockStyle}"/>
+        </Grid>
+
+        <!-- Main Content -->
+        <Grid Grid.Row="1" Margin="24">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <!-- Timer Display -->
+            <StackPanel Grid.Row="1" Style="{StaticResource TimerPanelStyle}">
+                <TextBlock Text="{x:Bind ViewModel.TimeDisplay, Mode=OneWay}"
+                         Style="{StaticResource TimerTextStyle}"/>
+                <TextBlock Text="{x:Bind ViewModel.CycleDisplay, Mode=OneWay}"
+                         Style="{StaticResource CycleTextStyle}"/>
+
+                <!-- Timer Controls -->
+                <StackPanel Orientation="Horizontal" 
+                          HorizontalAlignment="Center"
+                          Margin="0,32,0,0"
+                          Spacing="16">
+                    <Button x:Name="StartButton"
+                            Style="{StaticResource PrimaryButtonStyle}"
+                            Command="{x:Bind ViewModel.StartTimerCommand}">
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE768;"/>
+                            <TextBlock Text="Start Focus"/>
+                        </StackPanel>
+                    </Button>
+
+                    <Button x:Name="PauseButton"
+                            Style="{StaticResource CircleButtonStyle}"
+                            Command="{x:Bind ViewModel.PauseTimerCommand}">
+                        <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE769;"/>
+                    </Button>
+
+                    <Button x:Name="ResetButton"
+                            Style="{StaticResource CircleButtonStyle}"
+                            Command="{x:Bind ViewModel.ResetTimerCommand}">
+                        <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE72C;"/>
+                    </Button>
+                </StackPanel>
+            </StackPanel>
+
+            <!-- Navigation -->
+            <NavigationView Grid.Row="0" Grid.RowSpan="3"
+                          IsBackButtonVisible="Collapsed"
+                          IsSettingsVisible="True"
+                          PaneDisplayMode="LeftMinimal">
+                <NavigationView.MenuItems>
+                    <NavigationViewItem Icon="Clock" Content="Timer" IsSelected="True"/>
+                    <NavigationViewItem Icon="Calendar" Content="Statistics"/>
+                </NavigationView.MenuItems>
+            </NavigationView>
+        </Grid>
+    </Grid>
 </Window>
