--- a/DeepFocus/MainWindow.xaml
+++ b/DeepFocus/MainWindow.xaml
@@ -9,77 +9,38 @@
     xmlns:viewmodels="using:DeepFocus.ViewModels"
     mc:Ignorable="d">
 
-    <Window.SystemBackdrop>
-        <MicaBackdrop />
-    </Window.SystemBackdrop>
-
-    <Grid x:Name="RootGrid" Background="{ThemeResource BackgroundBrush}">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="48"/>
+            <RowDefinition Height="32"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- Title Bar -->
-        <Grid x:Name="AppTitleBar" Grid.Row="0">
-            <TextBlock x:Name="AppTitle" Text="DeepFocus"
+        <!-- Custom Title Bar -->
+        <Grid x:Name="AppTitleBar"
+              Background="Transparent"
+              Grid.Row="0">
+            <TextBlock x:Name="AppTitle"
+                     Text="DeepFocus"
+                     Style="{ThemeResource CaptionTextBlockStyle}"
                      VerticalAlignment="Center"
-                     Margin="12,0,0,0"
-                     Style="{StaticResource CaptionTextBlockStyle}"/>
+                     Margin="8,0,0,0"/>
         </Grid>
 
-        <!-- Main Content -->
-        <Grid Grid.Row="1" Margin="24">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+        <!-- Navigation View -->
+        <NavigationView x:Name="NavigationView"
+                       Grid.Row="1"
+                       IsBackButtonVisible="Collapsed"
+                       IsSettingsVisible="False"
+                       PaneDisplayMode="Left"
+                       SelectionChanged="NavigationView_SelectionChanged">
 
-            <!-- Timer Display -->
-            <StackPanel Grid.Row="1" Style="{StaticResource TimerPanelStyle}">
-                <TextBlock Text="{x:Bind ViewModel.TimeDisplay, Mode=OneWay}"
-                         Style="{StaticResource TimerTextStyle}"/>
-                <TextBlock Text="{x:Bind ViewModel.CycleDisplay, Mode=OneWay}"
-                         Style="{StaticResource CycleTextStyle}"/>
+            <NavigationView.MenuItems>
+                <NavigationViewItem Icon="Timer" Content="Timer" Tag="timer"/>
+                <NavigationViewItem Icon="AllApps" Content="Statistics" Tag="statistics"/>
+                <NavigationViewItem Icon="Setting" Content="Settings" Tag="settings"/>
+            </NavigationView.MenuItems>
 
-                <!-- Timer Controls -->
-                <StackPanel Orientation="Horizontal" 
-                          HorizontalAlignment="Center"
-                          Margin="0,32,0,0"
-                          Spacing="16">
-                    <Button x:Name="StartButton"
-                            Style="{StaticResource PrimaryButtonStyle}"
-                            Command="{x:Bind ViewModel.StartTimerCommand}">
-                        <StackPanel Orientation="Horizontal" Spacing="8">
-                            <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE768;"/>
-                            <TextBlock Text="Start Focus"/>
-                        </StackPanel>
-                    </Button>
-
-                    <Button x:Name="PauseButton"
-                            Style="{StaticResource CircleButtonStyle}"
-                            Command="{x:Bind ViewModel.PauseTimerCommand}">
-                        <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE769;"/>
-                    </Button>
-
-                    <Button x:Name="ResetButton"
-                            Style="{StaticResource CircleButtonStyle}"
-                            Command="{x:Bind ViewModel.ResetTimerCommand}">
-                        <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE72C;"/>
-                    </Button>
-                </StackPanel>
-            </StackPanel>
-
-            <!-- Navigation -->
-            <NavigationView Grid.Row="0" Grid.RowSpan="3"
-                          IsBackButtonVisible="Collapsed"
-                          IsSettingsVisible="True"
-                          PaneDisplayMode="LeftMinimal">
-                <NavigationView.MenuItems>
-                    <NavigationViewItem Icon="Clock" Content="Timer" IsSelected="True"/>
-                    <NavigationViewItem Icon="Calendar" Content="Statistics"/>
-                </NavigationView.MenuItems>
-            </NavigationView>
-        </Grid>
+            <Frame x:Name="ContentFrame"/>
+        </NavigationView>
     </Grid>
 </Window>
