Add volume control for notification sounds
- Added volume control to SoundManager
- Updated NotificationService with volume support
- Added volume slider to Settings page
- Created PercentageConverter for volume display
- Added volume persistence in settings
- Implemented volume override for individual sounds

--- a/DeepFocus/Views/SettingsPage.xaml
+++ b/DeepFocus/Views/SettingsPage.xaml
@@ -96,6 +96,19 @@
                             IsEnabled="{x:Bind ViewModel.PlayNotificationSounds, Mode=OneWay}"
                             MinWidth="200"/>
 
+                    <StackPanel Orientation="Horizontal" Spacing="8">
+                        <Slider Header="Notification Volume"
+                                Value="{x:Bind ViewModel.NotificationVolume, Mode=TwoWay}"
+                                Minimum="0"
+                                Maximum="1"
+                                StepFrequency="0.1"
+                                Width="200"
+                                IsEnabled="{x:Bind ViewModel.PlayNotificationSounds, Mode=OneWay}"/>
+                        <TextBlock Text="{x:Bind ViewModel.NotificationVolume, Mode=OneWay, Converter={StaticResource PercentageConverter}}"
+                                 VerticalAlignment="Bottom"
+                                 Margin="0,0,0,4"/>
+                    </StackPanel>
+
                     <ToggleSwitch Header="Show Toast Notifications"
                                 IsOn="{x:Bind ViewModel.ShowToastNotifications, Mode=TwoWay}"/>
 
