--- a/DeepFocus/App.xaml
+++ b/DeepFocus/App.xaml
@@ -3,15 +3,19 @@
     x:Class="DeepFocus.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DeepFocus">
+    xmlns:local="using:DeepFocus"
+    xmlns:converters="using:DeepFocus.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <ResourceDictionary Source="Styles/Colors.xaml" />
-                <ResourceDictionary Source="Styles/Styles.xaml" />
+                <ResourceDictionary Source="ms-appx:///Styles/Colors.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Styles/Styles.xaml"/>
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
+
+            <!-- Converters -->
+            <converters:PercentageConverter x:Key="PercentageConverter"/>
             <!-- Other app resources here -->
         </ResourceDictionary>
     </Application.Resources>
