Fix string formatting in StatisticsPage
- Added StringFormatConverter for proper string formatting
- Updated StatisticsPage bindings to use the converter
- Fixed time and count formatting in statistics view

--- a/DeepFocus/App.xaml
+++ b/DeepFocus/App.xaml
@@ -16,6 +16,7 @@
 
             <!-- Converters -->
             <converters:PercentageConverter x:Key="PercentageConverter"/>
+            <converters:StringFormatConverter x:Key="StringFormatConverter"/>
             <!-- Other app resources here -->
         </ResourceDictionary>
     </Application.Resources>
