fix: Update MainViewModel and XAML bindings
- Remove x:DataType from Page elements
- Add proper RelayCommand attributes with CanExecute conditions
- Fix command bindings in MainPage.xaml
- Add Progress property and update UI accordingly

--- a/DeepFocus/Views/StatisticsPage.xaml
+++ b/DeepFocus/Views/StatisticsPage.xaml
@@ -6,7 +6,16 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:vm="using:DeepFocus.ViewModels"
+    xmlns:converters="using:DeepFocus.Converters"
+    xmlns:models="using:DeepFocus.Models"
     mc:Ignorable="d">
+
+    <Page.Resources>
+        <converters:StringFormatConverter x:Key="StringFormatConverter"/>
+        <converters:DateToShortDateConverter x:Key="DateToShortDateConverter"/>
+        <converters:GreaterThanZeroToVisibilityConverter x:Key="GreaterThanZeroToVisibilityConverter"/>
+    </Page.Resources>
 
     <Grid Padding="24">
         <Grid.RowDefinitions>
