--- a/DeepFocus/Views/MainPage.xaml
+++ b/DeepFocus/Views/MainPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:DeepFocus.ViewModels"
     mc:Ignorable="d">
 
     <Grid Padding="24">
@@ -15,7 +16,7 @@
                      HorizontalAlignment="Center"/>
 
             <!-- Session Type -->
-            <TextBlock Text="{x:Bind ViewModel.SessionTypeDisplay, Mode=OneWay}"
+            <TextBlock Text="{x:Bind ViewModel.CycleDisplay, Mode=OneWay}"
                      Style="{ThemeResource SubtitleTextBlockStyle}"
                      HorizontalAlignment="Center"/>
 
